feat/get-current-user: init api
